--- a/Mod4_solution/index.html
+++ b/Mod4_solution/index.html
@@ -1,47 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset=utf-8 />
-<link rel="stylesheet" href="css.css">
-<link rel="stylesheet" href="js/js.js">
-<style> body{padding-top:50px;
-color:green;}</style>
+  <meta charset="utf-8">
+  <title>Module 4 Solution </title>
+  <script>
+    var names = []; 
+  </script>
+  <script src="script1.js"></script>
+  <script src="script2.js"></script>
+  <script src="script.js"></script>
 </head>
-<body id="ganu">
-<input type="text" id="text1"></input>
-<input type="button" id="button1" value="Add Name" onclick="add_element_to_array();"></input>
-<input type="button" id="button2" value="Display names" onclick="display_array();"></input>
-<div id="Result"></div> 
-<script type="text/javascript">var x = 0;
-var j;
-var array = Array();
-
-function add_element_to_array()
-{
- array[x] = document.getElementById("text1").value;
- alert("Element: " + array[x] + " Added at index " + x);
- x++;
- document.getElementById("text1").value = "";
-}
-
-function display_array()
-{
-   var e = "<hr/>";   
-    
-   for (var y=0; y<array.length; y++)
-   {  
-     var res = array[y].charAt(0);
-     if( res == j)
-       {
-         e+= "Goodbye " + array[y] + "<br/>";
-       }
-     else
-     {
-          e+= "Hello " + array[y] + "<br/>";
-     }
-     
-   }
-   document.getElementById("Result").innerHTML = e;
-}</script>
+<body>
+  <h1>Module 4 Solution</h1>
 </body>
 </html>
